Fix UI of buttons on mobile devices

--- a/portlets/social-button-portlet/src/main/webapp/css/main.css
+++ b/portlets/social-button-portlet/src/main/webapp/css/main.css
@@ -13,6 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+@import "compass";
+@import "mixins";
+
 $baseFontSize: 14px;
 $fontSizeSmall: (ceil(($baseFontSize * 0.85)));
 $fontSizeLarge: (ceil(($baseFontSize * 1.25)));
@@ -28,6 +32,17 @@ $bs-height-base: ($line-height-computed + $padding-base-vertical * 2);
 $bs-height-lg:   (floor($fontSizeLarge * $line-height-base) + $padding-large-vertical * 2);
 $bs-height-sm:   (floor($fontSizeSmall * 1.5) + $padding-small-vertical * 2);
 $bs-height-xs:   (floor($fontSizeSmall * 1.2) + $padding-small-vertical + 1);
+
+@include respond-to(phone, tablet) {
+	.aui {
+		.btn {
+			display: inline-block;
+			[class^="icon-"], [class*=" icon-"] {
+				margin-top: 0px;
+			}
+		}
+	}
+}
 
 @mixin btn-social($color-bg, $color: #fff) {
   background-color: $color-bg;
